--- a/src/App.css
+++ b/src/App.css
@@ -60,9 +60,9 @@
 
 .item img {
   width: 100%;
-  height: auto;
-  max-width: 200px;
-  margin-bottom: 10px;
+  height: 200px;
+  object-fit: cover;
+  object-position: center;
 }
 
 .item h3 {
